test/expected/explain_studc_i.out
explain static operator int()
             ^
14: error: user-defined conversion operator can not be "static"
